--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Blockchain implementation in Javascript",
   "main": "main.js",
   "dependencies": {
-    "crypto-js": "^4.0.0"
+    "crypto-js": "^4.0.0",
+    "elliptic": "^6.5.2"
   },
   "devDependencies": {},
   "scripts": {
